--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                         <a class="nav-link" href="#témoignages">Témoignages</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#témoignages">Nos assurances</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
