--- a/connexion.html
+++ b/connexion.html
@@ -142,5 +142,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="js/auth.js"></script>
+    <script type="module" src="/supabaseClient.js"></script>
+    <script type="module" src="/connexion.js"></script> ```
 </body>
 </html>
