--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
                                 <div class="form-check mb-3">
                                     <input class="form-check-input" type="checkbox" id="privacy" required>
                                     <label class="form-check-label" for="privacy">
-                                        J'accepte la <a href="#" class="text-primary">politique de confidentialité</a> *
+                                        J'accepte la <a href="#" class="text-info">politique de confidentialité</a> *
                                     </label>
                                     <div class="invalid-feedback">Vous devez accepter la politique de confidentialité.</div>
                                 </div>
