--- a/registre.html
+++ b/registre.html
@@ -43,6 +43,11 @@
                                         <i class="fas fa-user me-2"></i>Patient
                                     </button>
                                 </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="doctor-tab" data-bs-toggle="pill" data-bs-target="#doctor" type="button" role="tab">
+                                        <i class="fas fa-user-md me-2"></i>Médecin
+                                    </button>
+                                </li>
                             </ul>
 
                             <div class="tab-content" id="userTypeContent">
@@ -295,6 +300,11 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/register.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+    <script src="./supabaseClient.js"></script>
+
+    <script src="./register.js"></script> 
+
 </body>
 </html>
