--- a/connexion.html
+++ b/connexion.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="auth-body">
     <div class="auth-container">
@@ -140,9 +142,9 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Supabase Client -->
+    <script src="supabaseClient.js"></script>
     <!-- Custom JS -->
-    <script src="js/auth.js"></script>
-    <script type="module" src="/supabaseClient.js"></script>
-    <script type="module" src="/connexion.js"></script> ```
+    <script src="connexion.js"></script>
 </body>
 </html>
